fixed compile time issue